--- a/model/build_model_1.ipynb
+++ b/model/build_model_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,18 +16,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# update batch size\n",
-    "batch_size = 100\n",
+    "batch_size = 25\n",
     "\n",
     "# number of batch in training\n",
     "num_of_batch = 1000\n",
     "\n",
     "# fixed number of time steps in one episode (not used)\n",
-    "trading_period = 500\n",
+    "trading_period = 1000\n",
     "\n",
     "# 1 is zscore\n",
     "num_features = 1\n",
@@ -36,29 +36,34 @@
     "a_num = position_num = 3\n",
     "\n",
     "# RNN hidden state dimension\n",
-    "h_dim = 100\n",
+    "h_dim = 30\n",
     "\n",
     "# number of RNN layer\n",
     "num_layers = 1\n",
     "\n",
     "# number of layer1 output\n",
-    "layer1_out_num = 50\n",
+    "layer1_out_num = 30\n",
     "\n",
     "# learning rate\n",
-    "lr = 1e-3\n",
+    "lr = 5e-3\n",
     "\n",
     "# discount factor in reinforcement learning\n",
     "gamma = 1\n",
     "\n",
     "# random action probability\n",
-    "rand_action_prob = 0.15\n",
+    "rand_action_prob = 0.1\n",
     "\n",
-    "batch_per_print = 50"
+    "batch_per_print = 1\n",
+    "\n",
+    "# dummy initial cash\n",
+    "initial_cash = 10000\n",
+    "\n",
+    "ind = {'y_close': 0, 'x_close': 1, 'spread': 2}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,6 +97,36 @@
     "    # the i-th categorical distribution\n",
     "    return dist.sample()\n",
     "\n",
+    "def long_portfolio_value(q, p):\n",
+    "    return q*p\n",
+    "\n",
+    "def short_portfolio_value(q, p, init_p):\n",
+    "    return q*(3.0*init_p/2 - p)\n",
+    "\n",
+    "# def discount_rewards(r, all_actions):\n",
+    "#     \"\"\"\n",
+    "#     r is a numpy array in the shape of (n, batch_size).\n",
+    "#     all_actions is a numpy array in the same shape as r.\n",
+    "    \n",
+    "#     return the discounted and cumulative rewards\"\"\"\n",
+    "    \n",
+    "#     result = np.zeros_like(r, dtype=float)\n",
+    "#     n = r.shape[0]\n",
+    "#     sum_ = np.zeros_like(r[0], dtype=float)\n",
+    "#     pre_action = all_actions[n-1]\n",
+    "#     for i in range(n-1,-1,-1):\n",
+    "#         sum_ *= gamma\n",
+    "        \n",
+    "#         # when the previous action(position) not equal to the current one,\n",
+    "#         # set the previous sum of reward to be zero.\n",
+    "#         sum_ = sum_*(all_actions[i]==pre_action) + r[i]\n",
+    "#         result[i] = sum_\n",
+    "        \n",
+    "#         # update pre_action\n",
+    "#         pre_action = all_actions[i]\n",
+    "    \n",
+    "#     return result\n",
+    "\n",
     "def discount_rewards(r, all_actions):\n",
     "    \"\"\"\n",
     "    r is a numpy array in the shape of (n, batch_size).\n",
@@ -105,14 +140,8 @@
     "    pre_action = all_actions[n-1]\n",
     "    for i in range(n-1,-1,-1):\n",
     "        sum_ *= gamma\n",
-    "        \n",
-    "        # when the previous action(position) not equal to the current one,\n",
-    "        # set the previous sum of reward to be zero.\n",
-    "        sum_ = sum_*(all_actions[i]==pre_action) + r[i]\n",
+    "        sum_ += r[i]\n",
     "        result[i] = sum_\n",
-    "        \n",
-    "        # update pre_action\n",
-    "        pre_action = all_actions[i]\n",
     "    \n",
     "    return result\n",
     "\n",
@@ -190,6 +219,15 @@
     "\n",
     "        # 0 is no position. 1 is long the spread. 2 is short the spread\n",
     "        self.position = np.zeros(batch_size, dtype=int)\n",
+    "        \n",
+    "        # initialize the cash each agent has\n",
+    "        self.total_portfolio_value = np.ones(batch_size)*initial_cash\n",
+    "        \n",
+    "        # only useful when there is a postion on the spread\n",
+    "        self.quantity = {'x': np.zeros(batch_size), 'y': np.zeros(batch_size)}\n",
+    "        \n",
+    "        # for compute current portfolio value of the short side\n",
+    "        self.short_side_init_price = np.zeros(batch_size)\n",
     "\n",
     "        # prepare a batch of history and input_history\n",
     "        self.history = get_random_history(batch_size)\n",
@@ -207,27 +245,73 @@
     "            return self.state\n",
     "    \n",
     "    def compute_reward(self, action):\n",
-    "        # if action is 0, no reward.\n",
-    "        # if action is 1 or 2, can compute immediate return as immediate reward\n",
-    "        r = np.zeros_like(action, dtype=float)        \n",
+    "        \"\"\"Compute the reward at time t which is the change in total portfolio value\n",
+    "        from time t to t+1. It also update the position for time t+1. Exit trade when\n",
+    "        the short side portfolio value <= 0.\"\"\"\n",
+    "        \n",
+    "        r = np.zeros_like(action, dtype=float)\n",
     "        cur_his = self.history[self.t]\n",
     "        nex_his = self.history[self.t+1]\n",
     "        \n",
     "        # compute for each training instance in a batch\n",
     "        for i, a in enumerate(action):\n",
-    "#             y_p = cur_his[\"y_close\"][i]\n",
-    "#             x_p = cur_his[\"x_close\"][i]\n",
-    "#             nex_y_p = nex_his[\"y_close\"][i]\n",
-    "#             nex_x_p = nex_his[\"x_close\"][i]\n",
+    "            y_p = cur_his[ind[\"y_close\"], i]\n",
+    "            x_p = cur_his[ind[\"x_close\"], i]\n",
+    "            nex_y_p = nex_his[ind[\"y_close\"], i]\n",
+    "            nex_x_p = nex_his[ind[\"x_close\"], i]\n",
     "            \n",
-    "            y_p = cur_his[0][i]\n",
-    "            x_p = cur_his[1][i]\n",
-    "            nex_y_p = nex_his[0][i]\n",
-    "            nex_x_p = nex_his[1][i]\n",
-    "            if a == 1:\n",
-    "                r[i] = math.log(nex_y_p/y_p) + math.log(x_p/nex_x_p)\n",
-    "            elif a == 2:\n",
-    "                r[i] = math.log(nex_x_p/x_p) + math.log(y_p/nex_y_p)\n",
+    "            \n",
+    "            if a == 0: # take no position on the spread\n",
+    "                # no change in portfolio value\n",
+    "                r[i] = 0\n",
+    "                self.position[i] = 0\n",
+    "            elif a == 1: # long the spread: long Y and short X\n",
+    "                # quantity of each stock will change when the current position is not previous position\n",
+    "                if self.position[i] == 0 or self.position[i] == 2:\n",
+    "                    # compute quantity from cash\n",
+    "                    self.quantity['y'][i] = 2.0*self.total_portfolio_value[i]/3.0/y_p\n",
+    "                    self.quantity['x'][i] = 2.0*self.total_portfolio_value[i]/3.0/x_p\n",
+    "                    self.short_side_init_price[i] = x_p\n",
+    "\n",
+    "                lpv = long_portfolio_value(self.quantity['y'][i], nex_y_p)\n",
+    "                spv = short_portfolio_value(self.quantity['x'][i], nex_x_p, self.short_side_init_price[i])\n",
+    "                \n",
+    "                # the zero here can be changed to other positive threshold ...\n",
+    "                if spv <= 0:\n",
+    "                    # we loss all the money in the short side\n",
+    "                    nex_portfolio_value = lpv\n",
+    "\n",
+    "                    # forced to take position 0\n",
+    "                    self.postion[i] = 0\n",
+    "                else:\n",
+    "                    nex_portfolio_value = lpv + spv\n",
+    "                    self.position[i] = 1\n",
+    "                \n",
+    "                r[i] = nex_portfolio_value - self.total_portfolio_value[i]\n",
+    "                self.total_portfolio_value[i] = nex_portfolio_value\n",
+    "            elif a == 2: # short the spread: short Y and long X\n",
+    "                # quantity will change when the current position is not previous position\n",
+    "                if self.position[i] == 0 or self.position[i] == 1:\n",
+    "                    # compute quantity from cash\n",
+    "                    self.quantity['y'][i] = 2.0*self.total_portfolio_value[i]/3.0/y_p\n",
+    "                    self.quantity['x'][i] = 2.0*self.total_portfolio_value[i]/3.0/x_p\n",
+    "                    self.short_side_init_price[i] = y_p\n",
+    "\n",
+    "                lpv = long_portfolio_value(self.quantity['x'][i], nex_x_p)\n",
+    "                spv = short_portfolio_value(self.quantity['y'][i], nex_y_p, self.short_side_init_price[i])\n",
+    "                \n",
+    "                if spv <= 0:\n",
+    "                    # we loss all the money in the short side\n",
+    "                    nex_portfolio_value = lpv\n",
+    "\n",
+    "                    # forced to take position 0\n",
+    "                    self.postion[i] = 0\n",
+    "                else:\n",
+    "                    nex_portfolio_value = lpv + spv\n",
+    "                    self.position[i] = 2\n",
+    "                \n",
+    "                r[i] = nex_portfolio_value - self.total_portfolio_value[i]\n",
+    "                self.total_portfolio_value[i] = nex_portfolio_value\n",
     "        return r\n",
     "    \n",
     "    def update_state(self):\n",
@@ -235,7 +319,7 @@
     "        partial_state = tf.concat([self.input_history[self.t].T, tf.one_hot(self.position, position_num)], 1)\n",
     "        \n",
     "        # update state\n",
-    "        self.state = self.state_encoding_model(partial_state)        \n",
+    "        self.state = self.state_encoding_model(partial_state)\n",
     "    \n",
     "    def step(self, action):\n",
     "        \"\"\"Given the current state and action, return the reward, next state and done.\n",
@@ -252,50 +336,22 @@
     "        before computing next state.\n",
     "        \"\"\"\n",
     "        # r_t\n",
-    "        r = self.compute_reward(action)\n",
+    "        r = self.compute_reward(action) # also update the position for time t+1\n",
     "\n",
     "        # t = t+1\n",
     "        self.t += 1\n",
     "        \n",
     "        # compute s_(t+1)\n",
-    "        self.position = action\n",
     "        self.update_state()\n",
     "\n",
-    "        return r, self.state, self.t == batch_size"
+    "        return r, self.state, self.t+1 == trading_period"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "batch: 49, average_total_r_per_ep: 1.6464054135444144e-05\n",
-      "batch: 99, average_total_r_per_ep: -2.2561814368062148e-05\n",
-      "batch: 149, average_total_r_per_ep: -1.3817527085588554e-05\n",
-      "batch: 199, average_total_r_per_ep: 5.936656222624392e-05\n",
-      "batch: 249, average_total_r_per_ep: 2.0207143590096053e-05\n",
-      "batch: 299, average_total_r_per_ep: 2.5382190553506685e-05\n",
-      "batch: 349, average_total_r_per_ep: 5.874221155951589e-05\n",
-      "batch: 399, average_total_r_per_ep: 3.5309044906404675e-05\n",
-      "batch: 449, average_total_r_per_ep: 7.370314040504169e-05\n",
-      "batch: 499, average_total_r_per_ep: 7.194255206300513e-05\n",
-      "batch: 549, average_total_r_per_ep: 3.744918510306042e-05\n",
-      "batch: 599, average_total_r_per_ep: 2.2135442501452317e-05\n",
-      "batch: 649, average_total_r_per_ep: 4.44327209753318e-05\n",
-      "batch: 699, average_total_r_per_ep: 5.214230257825284e-05\n",
-      "batch: 749, average_total_r_per_ep: 1.8597701248665535e-05\n",
-      "batch: 799, average_total_r_per_ep: 4.5274625407673044e-05\n",
-      "batch: 849, average_total_r_per_ep: 3.1649892616269556e-05\n",
-      "batch: 899, average_total_r_per_ep: 2.2087040420632587e-05\n",
-      "batch: 949, average_total_r_per_ep: 2.69514208243513e-05\n",
-      "batch: 999, average_total_r_per_ep: 3.282878433785706e-05\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pi = TradingPolicyModel()\n",
     "state_encoding_model = StateEncodingModel()\n",
@@ -327,21 +383,26 @@
     "            all_rewards.append(r)\n",
     "            \n",
     "            average_total_r += r\n",
-    "        \n",
+    "            \n",
+    "#             # debugging\n",
+    "#             print(r[0])\n",
+    "#             print(env.total_portfolio_value[0])\n",
+    "#             print(done)\n",
+    "\n",
     "        all_logits_stack = tf.stack(all_logits)\n",
     "        all_actions_stack = tf.stack(all_actions)\n",
     "        all_rewards_stack = np.array(all_rewards)\n",
     "        \n",
     "        # compute cummulative rewards for each action\n",
     "        all_cum_rewards = discount_rewards(all_rewards_stack, all_actions_stack.numpy())\n",
-    "        all_cum_rewards -= np.mean(all_cum_rewards)\n",
-    "        all_cum_rewards /= np.std(all_cum_rewards)\n",
+    "#         all_cum_rewards -= np.mean(all_cum_rewards)\n",
+    "#         all_cum_rewards /= np.std(all_cum_rewards)\n",
     "        all_cum_rewards = tf.convert_to_tensor(all_cum_rewards, dtype=tf.float32)\n",
     "\n",
     "        loss_value = loss(all_logits_stack, all_actions_stack, all_cum_rewards)\n",
     "    \n",
     "    if (batch+1) % batch_per_print == 0:\n",
-    "        print(\"batch: {}, average_total_r_per_ep: {}\".format(batch, np.mean(average_total_r)/batch_per_print))\n",
+    "        print(\"batch id: {}, average_total_r_per_ep: {}\".format(batch, np.mean(average_total_r)/batch_per_print))\n",
     "        average_total_r = np.zeros(batch_size)\n",
     "    \n",
     "    grads = gt.gradient(loss_value, state_encoding_model.variables + pi.variables)\n",
@@ -350,17 +411,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "At test time, average_total_r_per_ep: 4.2436951307533045e-05\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# test time\n",
     "average_total_r = np.zeros(batch_size)\n",
