added code for backtesting multiple pairs

--- a/jupyter-py/3b-Load-IB-Data-Blocks.ipynb
+++ b/jupyter-py/3b-Load-IB-Data-Blocks.ipynb
@@ -758,7 +758,72 @@
       "405/437 completed.\n",
       "Downloading data of NASDAQ: TTEC\n",
       "406/437 completed.\n",
-      "Downloading data of NASDAQ: TTMI\n"
+      "Downloading data of NASDAQ: TTMI\n",
+      "407/437 completed.\n",
+      "Downloading data of NASDAQ: TCX\n",
+      "408/437 completed.\n",
+      "Downloading data of NASDAQ: TWIN\n",
+      "409/437 completed.\n",
+      "Downloading data of NASDAQ: UBNT\n",
+      "410/437 completed.\n",
+      "Downloading data of NASDAQ: UCTT\n",
+      "411/437 completed.\n",
+      "Downloading data of NASDAQ: UPLD\n",
+      "412/437 completed.\n",
+      "Downloading data of NASDAQ: UPWK\n",
+      "413/437 completed.\n",
+      "Downloading data of NASDAQ: VRNS\n",
+      "414/437 completed.\n",
+      "Downloading data of NASDAQ: VECO\n",
+      "415/437 completed.\n",
+      "Downloading data of NASDAQ: VRNT\n",
+      "416/437 completed.\n",
+      "Downloading data of NASDAQ: VRSN\n",
+      "417/437 completed.\n",
+      "Downloading data of NASDAQ: VRSK\n",
+      "418/437 completed.\n",
+      "Downloading data of NASDAQ: VERI\n",
+      "419/437 completed.\n",
+      "Downloading data of NASDAQ: VSAT\n",
+      "420/437 completed.\n",
+      "Downloading data of NASDAQ: VIAV\n",
+      "421/437 completed.\n",
+      "Downloading data of NASDAQ: VRTU\n",
+      "422/437 completed.\n",
+      "Downloading data of NASDAQ: VUZI\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Error 162, reqId 196: Historical Market Data Service error message:No market data permissions for AMEX, ARCA, NYSENAT, PSX STK, contract: Stock(symbol='VUZI', exchange='SMART', primaryExchange='NASDAQ', currency='USD')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: 423/437 download aborted.\n",
+      "Downloading data of NASDAQ: WSTG\n",
+      "424/437 completed.\n",
+      "Downloading data of NASDAQ: WB\n",
+      "425/437 completed.\n",
+      "Downloading data of NASDAQ: WDC\n",
+      "426/437 completed.\n",
+      "Downloading data of NASDAQ: WIX\n",
+      "427/437 completed.\n",
+      "Downloading data of NASDAQ: WDAY\n",
+      "428/437 completed.\n",
+      "Downloading data of NASDAQ: XLNX\n",
+      "429/437 completed.\n",
+      "Downloading data of NASDAQ: XPER\n",
+      "430/437 completed.\n",
+      "Downloading data of NASDAQ: XNET\n",
+      "431/437 completed.\n",
+      "Downloading data of NASDAQ: YNDX\n",
+      "432/437 completed.\n",
+      "Downloading data of NASDAQ: YY\n"
      ]
     }
    ],
